# ClientServerApp

./: .gitignore  CMakeLists.txt  readme.md  readme.txt
ClientApp/: CMakeLists.txt  clientlogic.cpp  clientlogic.h  clientprotocol.h  main.cpp
ServerApp/: CMakeLists.txt  ConfigurationDialog.qml  Main.qml  ServerManagementDialog.qml  UniversalTable.qml  appenums.h  dataprocessing.cpp  dataprocessing.h  iclient.h  iserver.h  main.cpp  protocol.h  serverfactory.h  serverlistmodel.cpp  serverlistmodel.h  serverviewmodel.cpp  serverviewmodel.h  serverworker.cpp  serverworker.h  sharedkeys.h  tablemodel.cpp  tablemodel.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
ServerApp/core/: appenums.h  dataprocessing.cpp  dataprocessing.h  iserver.h  serverfactory.h  serverworker.cpp  serverworker.h  sharedkeys.h  tcpserver.cpp  tcpserver.h
ServerApp/models/: serverlistmodel.cpp  serverlistmodel.h  serverviewmodel.cpp  serverviewmodel.h  tablemodel.cpp  tablemodel.h
ServerApp/qml/: AppTheme.qml  ConfigurationDialog.qml  Main.qml  ServerManagementDialog.qml  UniversalTable.qml  appicon.rc  resource.qrc
common/: iclient.h  protocol.h  tcpclient.cpp  tcpclient.h
